[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/art/ball/ball_selection.png" type="Texture" id=1]
[ext_resource path="res://src/Items/Ball/Selector.gd" type="Script" id=2]
[ext_resource path="res://assets/art/ball/ball_test.png" type="Texture" id=3]
[ext_resource path="res://src/Items/Ball/KinematicBall.gd" type="Script" id=4]
[ext_resource path="res://src/Effects/DustParticle.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[node name="KinematicBall" type="KinematicBody2D"]
position = Vector2( 417, 241 )
z_index = 2
input_pickable = true
collision_layer = 2
collision_mask = 3
script = ExtResource( 4 )

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Selector" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Selector"]
shape = SubResource( 2 )

[node name="Sprite_Selection" type="Sprite" parent="Selector"]
visible = false
modulate = Color( 0.980392, 0.803922, 0.498039, 1 )
texture = ExtResource( 1 )

[node name="DustParticle" parent="." instance=ExtResource( 5 )]
[connection signal="mouse_entered" from="Selector" to="Selector" method="_on_Selector_mouse_entered"]
[connection signal="mouse_exited" from="Selector" to="Selector" method="_on_Selector_mouse_exited"]
